deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8sfoams
spec:
  selector: {app: k8sfoams}
  ports:
    - {name: http, port: 80, targetPort: http}
